# My-Web-Portfolio

./: Procfile  index.html  pyproject.toml
src/my_portfolio_web/: __init__.py  main.py
src/my_portfolio_web/static/: index.css  index.html
