[project]
name = "my-portfolio-web"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "MR-RITZY", email = "mrboffin01@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn>=0.38.0",
]

[project.scripts]
my-portfolio-web = "my_portfolio_web:main"

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"
